--- a/package.json
+++ b/package.json
@@ -21,20 +21,18 @@
     "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/vite": "^4.0.0",
     "@vincjo/datatables": "^2.5.0",
     "eslint": "^9.18.0",
     "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.20.0",
     "vite": "^6.2.5"
   },
   "dependencies": {
+    "@fontsource/source-sans-pro": "^5.2.5",
     "csv-parse": "^5.6.0",
     "csv-stringify": "^6.5.2",
     "drizzle-orm": "^0.42.0",
